minor changes to fix misalignment of text

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,18 @@ body {
   color: #e3e3e3
 }
 
+#btn {
+  margin-bottom: 50px;
+  padding: 5px 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 25px;
+  border: 5px solid #e3e3e3;
+  border-radius: 20px;
+  cursor: pointer;
+  color: #233142;
+  font-weight: 600;
+}
+
 .container {
   width: 90%;
   margin: auto;
